Added an icon from font awesome
Seem to be having some difficulties with font awesome, some the icons show up the same despite changes in the html. Will look into this.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
   <!--Overall Page Container-->
   <div class="container">
     <h1>
+      <!--for some reason adding "fa" or "fas" in the front made the icon work but the styling is wrong-->
+      <i class="fa fa-light fa-paw"></i>
       The Pit Bull Pitstop
     </h1>
   </div>
