Hero homepage created
-variables (color scheme) made
-spacing and alignment added

--- a/index.html
+++ b/index.html
@@ -32,14 +32,31 @@
 </head>
 
 <body>
-  <!--Overall Page Container-->
-  <div class="container">
-    <h1>
+  <!--🏁🏁 Overall Page Container removed-->
+
+  <!--Hero Section Div-->
+  <div class="hero">
+    <p>
       <!--for some reason adding "fa" or "fas" in the front made the icon work but the styling is wrong-->
-      <i class="fa fa-light fa-paw"></i>
-      The Pit Bull Pitstop
+      <i class="fa fa-light fa-arrow-rotate-right"></i>
+      Re-Learn
+    </p>
+
+    <h1>
+      The Pit Bull
     </h1>
+
+    <h2 class="mb-5">
+      Misinterpreted and Mismanaged
+    </h2>
+
+    <div>
+      <a href="#" class="btn btn-branding">Learn More</a>
+    </div>
+    <!--End of Hero Section-->
   </div>
+  <!--🛑🛑 Div container ending here removed ⬇️⬇️-->
+
 </body>
 
 </html>
