Integrated homepage content design
-imported images
- added some responsiveness for small devices

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 </head>
 
 <body>
-  <!--🏁🏁 Overall Page Container removed-->
 
   <!--Hero Section Div-->
   <div class="hero">
@@ -55,7 +54,102 @@
     </div>
     <!--End of Hero Section-->
   </div>
-  <!--🛑🛑 Div container ending here removed ⬇️⬇️-->
+
+  <!--Start of homepage content-->
+  <p class="text-center m-5">
+    A glance at the stages of your dog's life.
+  </p>
+
+  <div class="container">
+    <!--Row 1-->
+    <div class="row mb-5">
+
+      <!--Column 1-->
+      <div class="col">
+        <div class="stages-info">
+          <h2 class="mb-5">
+            Puppy Stage
+          </h2>
+          <p class="mb-5 text-muted">
+            This stage lasts about 1 year, however
+
+            it can be up to 2 years for some
+
+            to reach their full size and become more emotionally
+
+            stable and mentally mature. This is the time of maximum fun, playing, zoomies, naps and toys galore!
+          </p>
+          <a href="#" class="btn btn-branding-outline">
+            Learn More
+          </a>
+        </div>
+      </div>
+
+      <!--Column 2-->
+      <div class="col d-none d-lg-block">
+        <!--image pexels by Justin Thompson-->
+        <img src="/Images/pit-bull-puppy-homepage.jpg" class="img-fluid" alt="Picture of a brown pit bull puppy">
+      </div>
+    </div>
+
+    <!--Row 2-->
+    <div class="row mb-5">
+
+      <!--Column 2-->
+      <div class="col d-none d-lg-block">
+        <!--Adult pic pexels by Ricky Van Fessem-->
+        <img src="/Images/adult-pit-bull-homepage.jpg" class="img-fluid" alt="Picture of a brown pit bull puppy">
+      </div>
+
+      <!--Column 1-->
+      <div class="col">
+        <div class="stages-info">
+          <h2 class="mb-5">
+            Adult Stage
+          </h2>
+          <p class="mb-5 text-muted">
+            This stage lasts from 1-2 years of age up until about 7 years. This is the time where your pooch's
+            behavior will begin to settle as their individual
+            personality come forth. This is the time where bonding and loyalty strengthens over time.
+          </p>
+          <a href="#" class="btn btn-branding-outline">
+            Learn More
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!--Row 3-->
+    <div class="row">
+
+      <!--Column 1-->
+      <div class="col">
+        <div class="stages-info">
+          <h2 class="mb-5">
+            Senior Stage
+          </h2>
+          <p class="mb-5 text-muted">
+            This stage generally begins at
+
+            about 8 years of age. Most dogs at this
+
+            age begin to slow down and rest more. As our pets get older this is the time they rely on us to be there for
+            them all the more, as they were for us throughout the years.
+          </p>
+          <a href="#" class="btn btn-branding-outline">
+            Learn More
+          </a>
+        </div>
+      </div>
+
+      <!--Column 2-->
+      <div class="col d-none d-lg-block">
+        <!--Senior pic pexels by Shana Dugan-->
+        <img src="/Images/senior-pit-bull-homepage.jpg" class="img-fluid" alt="Picture of a brown pit bull puppy">
+      </div>
+    </div>
+
+  </div>
 
 </body>
 
