About page content added
some new images added to project

--- a/about.html
+++ b/about.html
@@ -32,12 +32,38 @@
 </head>
 
 <body>
-  <!--Overall Page Container-->
-  <div class="container">
-    <h1>
-      About The Pit Bull
-    </h1>
-
+  <!--About Hero Section-->
+  <div class="about-section">
+    <!--About section Row 1-->
+    <div class="row">
+      <div class="col-md-6">
+        <!--About section content div-->
+        <div class="about-section-content">
+          <h1 class="mb-4">
+            About The Pit Bull
+          </h1>
+          <h2 class="mb-4">
+            Mixed breed dogs with certain physical traits
+          </h2>
+          <p class="mb-5">
+            According to the
+            <a
+              href="https://animalfoundation.com/whats-going-on/blog/pitbull-breed#:~:text=%E2%80%9CPitbulls%20or%20pit%20bulls%E2%80%9D%20are,muscular%20body%20and%20broad%20head.">
+              AnimalFoundation.com
+            </a>
+            today there are at least five breeds of dogs that are commonly misidentified and lumped into the category of
+            the pitbull-type dogs. The term “pit bull” is commonly used to refer to mixed breed dogs with certain
+            physical traits,
+            such as a muscular body and broad head.
+          </p>
+          <a href="#" class="btn btn-branding">Find out more</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img src="/Images/pit-snuggle-pexels-helena.jpg" class="img-fluid about-hero-img"
+          alt="Picture of adult brown pit bull snuggled in a blanket.">
+      </div>
+    </div>
   </div>
 </body>
 
