Information page created and styled
-More images added to project.
-Re-assigned h1 title.

--- a/information.html
+++ b/information.html
@@ -32,11 +32,110 @@
 </head>
 
 <body>
-  <!--Overall Page Container-->
-  <div class="container">
-    <h1>
-      Things to Know
-    </h1>
+  <!--Overall Page Content Container-->
+  <div class="content-container container">
+    <div class="row">
+
+      <div class="content">
+        <h1 class="mb-5">
+          Key Information
+        </h1>
+
+        <div class="row">
+          <div class="col-md-6 mb-3 info-column">
+            <h3 class="text-center">Energy, Training, and Intelligence</h3>
+            <img src="/Images/adult-and-puppy-pit-pexels-heidi-meborg-6469211.jpg"
+              alt="black adult and puppy pit bull laying in the grass together" class="img-fluid info-img">
+            <p class="text-center text-muted">
+              Pit Bulls are athletic and energetic by design. Along with tons of energy, they are very smart dogs. The
+              combination of energy and lack of exercise can be catastrophic. Pit Bulls form very strong bonds with
+              their owners and require quality bonding time every day. If left alone for long periods of time,
+              especially without exercise, they can become anxious, depressed, and destructive.
+              <br />
+              <br />
+              Training can help to manage their behavior by providing mental and physical stimulation. Puppy training
+              sessions are a great tip for socializing a pit bull because it helps them build their confidence. Once
+              into
+              adulthood Pit Bulls sporadic behavior and energy levels start to decline and
+              mellow out. Senior Pit Bulls still have that spunk for life and still require at least 30 minutes of
+              exercise daily to keep up good joint and overall health, however, they are much more slow and easy
+              going.
+            </p>
+          </div>
+
+          <div class="col-md-6 mb-3 info-column">
+            <h3 class="text-center">
+              Coat Care
+            </h3>
+            <img src="/Images/pit-skin.jpeg" alt="Pit Bull getting a bath in a tub outdoors."
+              class="img-fluid info-img">
+            <p class="text-center text-muted">
+              Pit bulls are single-coated, meaning that they have only one type of hair on their bodies. They lack the
+              layer of longer guard hairs as well as a soft, insulating undercoat, which keeps them
+              warmer and
+              protects their skin from the elements. Due to their short fur and lack of undercoat, pit bulls’ skin is
+              not shielded
+              from environmental allergens and irritants, making them more susceptible to skin problems.
+              <br />
+              <br />
+              Pit Bulls have
+              mostly been bred without regard for genetics, allowing some hereditary issues to be passed on through
+              genetics. Dogs with skin issues can be self-destructive as they try endlessly to solve their discomfort.
+              It’s important to spot the signs of skin issues such as: red or irritated skin, paw chewing or licking,
+              dry itchy skin, excessive scratching, biting, and the appearance of scabs or sores.
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-3 info-column">
+            <h3 class="text-center">
+              Joint Care
+            </h3>
+            <img src="/Images/older-pit-pexels-edwin-lopez-13620404.jpg"
+              alt="picture or older brown Pit  Bull standing up" class="img-fluid info-img">
+            <p class="text-center text-muted">
+              The good new is, Pit Bull-type type dogs are very athletic and healthy. But of course some health issues
+              can pop up, some of the top ones include: hip and elbow dysplasia and osteoarthritis. Having a larger
+              stocky build puts a lot of pressure on their joints which causes hip and elbow dysplasia, The root of
+              joint mobility issues. Pit bull-type breeds could benefit from preventative
+              dosing of a joint supplement added to their daily diet.
+              <br />
+              <br />
+              Hip and Elbow Dysplasia go hand in hand with arthritis in the pit bull-type breed of dog. Again, a
+              preventative measure can benefit these dogs as their stocky build
+              impacts their joints over time. If your dog is over age 5, some more noticeable signs of arthritis
+              include: reluctance for exercise and play, stiffness in the morning after sleeping the night, visible
+              stiffness from getting up from lying down, difficulty doing routine activities.
+            </p>
+          </div>
+
+          <div class="col-md-6 mb-3 info-column">
+            <h3 class="text-center">
+              Socialization
+            </h3>
+            <img src="/Images/pit-with-stick-pexels-rick-van-fessem.jpg"
+              alt="Brown Pit Bull with s large stick in his mouth" class="img-fluid info-img">
+            <p class="text-center text-muted">
+              Socialization is particularly important for pit bulls. The reasons for this can be divided into three
+              categories: strength and speed, tendency toward dog aggression, and breed reputation. The pit bull is
+              without question, one of the breeds capable of doing the most damage in the shortest amount of time to a
+              perceived enemy.
+              <br />
+              <br />
+              As with all large, powerful breeds that can do a lot of damage quickly, pit bull owners
+              have a greater duty to look out
+              for the safety of others. To help your pit bull establish a healthy interaction with fellow canines and
+              dog-owners, getting them enrolled in an
+              obedience course is effective. This helps your pit bull to understand the nuances of social behavior and
+              avoid temperamental problems.
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
   </div>
 </body>
 
