--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
 
 <body>
   <!--About Hero Section-->
-  <div class="about-section">
+  <div class="content-container container">
     <!--About section Row 1-->
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <!--About section content div-->
-        <div class="about-section-content">
+        <div class="content">
           <h1 class="mb-4">
             About The Pit Bull
           </h1>
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img src="/Images/pit-snuggle-pexels-helena.jpg" class="img-fluid about-hero-img"
+        <img src="/Images/pit-snuggle-pexels-helena.jpg" class="img-fluid content-hero-img"
           alt="Picture of adult brown pit bull snuggled in a blanket.">
       </div>
     </div>
