--- a/help.html
+++ b/help.html
@@ -33,9 +33,43 @@
 <body>
   <!--Overall Page Container-->
   <div class="container">
-    <h1>
-      Ways to Help
-    </h1>
+    <div class=" mb-5 content">
+      <h1 class="text-center">
+        Ways to Help
+      </h1>
+      <h3 class="text-center">
+        Donate
+      </h3>
+      <p class="text-center">
+        <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+          Help save more precious Pit Bulls around the world.
+        </a>
+      </p>
+      <h3 class="text-center">
+        Foster
+      </h3>
+      <p class="text-center">
+        <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+          Open your home to a Pit Bull in need.
+        </a>
+      </p>
+      <h3 class="text-center">
+        Adopt
+      </h3>
+      <p class="text-center">
+        <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+          Find your forever friend today!
+        </a>
+      </p>
+      <h3 class="text-center">
+        Watch
+      </h3>
+      <p class="text-center">
+        <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+          Watch videos all about Pit Bulls and fall in love.
+        </a>
+      </p>
+    </div>
   </div>
 </body>
 
