--- a/help.html
+++ b/help.html
@@ -31,8 +31,43 @@
 </head>
 
 <body>
+  <div class="container">
+    <!--NAVIGATION-->
+    <nav class="d-flex justify-content-between">
+      <!-- Logo pic links-->
+      <a href="/">
+        <img src="/Images/pit-bul-pitstop.png" class="logo d-none d-md-block" alt="Pit Bull Pitstop Logo Paw picture">
+        <img src="/Images/logo-small.jpg" class="d-block d-md-none" alt="Small logo icon">
+      </a>
+      <!--Nav links-->
+      <ul>
+        <li>
+          <a href="/">
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="/about.html">
+            About
+          </a>
+        </li>
+        <li>
+          <a href="/information.html">
+            Key Info
+          </a>
+        </li>
+        <li class="active">
+          <a href="/help.html" class="active">
+            Ways to Help
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
   <!--Overall Page Container-->
   <div class="container">
+
     <div class=" mb-5 content">
       <h1 class="text-center">
         Ways to Help
@@ -41,7 +76,7 @@
         Donate
       </h3>
       <p class="text-center">
-        <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+        <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" class="help-links">
           Help save more precious Pit Bulls around the world.
         </a>
       </p>
@@ -49,7 +84,7 @@
         Foster
       </h3>
       <p class="text-center">
-        <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+        <a href="https://love-a-bull.org/adopt/foster/" target="_blank" class="help-links">
           Open your home to a Pit Bull in need.
         </a>
       </p>
@@ -57,7 +92,7 @@
         Adopt
       </h3>
       <p class="text-center">
-        <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+        <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" class="help-links">
           Find your forever friend today!
         </a>
       </p>
@@ -65,7 +100,7 @@
         Watch
       </h3>
       <p class="text-center">
-        <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+        <a href="https://www.thedodo.com/series/pittie-nation" target="_blank" class="help-links">
           Watch videos all about Pit Bulls and fall in love.
         </a>
       </p>
