--- a/index.html
+++ b/index.html
@@ -32,6 +32,39 @@
 </head>
 
 <body>
+  <div class="container">
+    <!--NAVIGATION-->
+    <nav class="d-flex justify-content-between">
+      <!-- Logo pic links-->
+      <a href="/">
+        <img src="/Images/pit-bul-pitstop.png" class="logo d-none d-md-block" alt="Pit Bull Pitstop Logo Paw picture">
+        <img src="/Images/logo-small.jpg" class="d-block d-md-none" alt="Small logo icon">
+      </a>
+      <!--Nav links-->
+      <ul>
+        <li class="active">
+          <a href="/" class="active">
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="/about.html">
+            About
+          </a>
+        </li>
+        <li>
+          <a href="/information.html">
+            Key Info
+          </a>
+        </li>
+        <li>
+          <a href="/help.html">
+            Ways to Help
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 
   <!--Hero Section Div-->
   <div class="hero">
