--- a/information.html
+++ b/information.html
@@ -32,8 +32,43 @@
 </head>
 
 <body>
+  <div class="container">
+    <!--NAVIGATION-->
+    <nav class="d-flex justify-content-between">
+      <!-- Logo pic links-->
+      <a href="/">
+        <img src="/Images/pit-bul-pitstop.png" class="logo d-none d-md-block" alt="Pit Bull Pitstop Logo Paw picture">
+        <img src="/Images/logo-small.jpg" class="d-block d-md-none" alt="Small logo icon">
+      </a>
+      <!--Nav links-->
+      <ul>
+        <li>
+          <a href="/">
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="/about.html">
+            About
+          </a>
+        </li>
+        <li class="active">
+          <a href="/information.html" class="active">
+            Key Info
+          </a>
+        </li>
+        <li>
+          <a href="/help.html">
+            Ways to Help
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+
   <!--Overall Page Content Container-->
   <div class="content-container container">
+
     <div class="row">
 
       <div class="content">
