Footer created and styled
- font awesome icons added
- css re-arranged to improve readability

--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
           </h2>
           <p class="mb-5">
             According to the
-            <a
-              href="https://animalfoundation.com/whats-going-on/blog/pitbull-breed#:~:text=%E2%80%9CPitbulls%20or%20pit%20bulls%E2%80%9D%20are,muscular%20body%20and%20broad%20head.">
+            <a href="https://animalfoundation.com/whats-going-on/blog/pitbull-breed#:~:text=%E2%80%9CPitbulls%20or%20pit%20bulls%E2%80%9D%20are,muscular%20body%20and%20broad%20head."
+              target="_blank" class="about-pit-link">
               AnimalFoundation.com
             </a>
             today there are at least five breeds of dogs that are commonly misidentified and lumped into the category of
@@ -91,7 +91,7 @@
             physical traits,
             such as a muscular body and broad head.
           </p>
-          <a href="#" class="btn btn-branding">Find out more</a>
+          <a href="/information.html" class="btn btn-branding">Find out more</a>
         </div>
       </div>
       <div class="col-md-6">
@@ -100,6 +100,24 @@
       </div>
     </div>
   </div>
+
+  <!--FOOTER-->
+  <footer>
+    <div class="help-links d-flex justify-content-center">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+        <i class="fa fa-light fa-hand-holding-dollar"></i>
+      </a>
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+        <i class="fa fa-thin fa-dog"></i>
+      </a>
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+        <i class="fa fa-light fa-house"></i>
+      </a>
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+        <i class="fa fa-brands fa-facebook"></i>
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
