--- a/information.html
+++ b/information.html
@@ -78,7 +78,10 @@
 
         <div class="row">
           <div class="col-md-6 mb-3 info-column">
-            <h3 class="text-center">Energy, Training, and Intelligence</h3>
+
+            <h3 class="text-center" id="pups-and-adults">
+              Energy, Training, and Intelligence
+            </h3>
             <img src="/Images/adult-and-puppy-pit-pexels-heidi-meborg-6469211.jpg"
               alt="black adult and puppy pit bull laying in the grass together" class="img-fluid info-img">
             <p class="text-center text-muted">
@@ -99,7 +102,7 @@
           </div>
 
           <div class="col-md-6 mb-3 info-column">
-            <h3 class="text-center">
+            <h3 class="text-center" id="senior">
               Coat Care
             </h3>
             <img src="/Images/pit-skin.jpeg" alt="Pit Bull getting a bath in a tub outdoors."
@@ -124,7 +127,7 @@
 
         <div class="row">
           <div class="col-md-6 mb-3 info-column">
-            <h3 class="text-center">
+            <h3 class="text-center" id="health">
               Joint Care
             </h3>
             <img src="/Images/older-pit-pexels-edwin-lopez-13620404.jpg"
@@ -172,6 +175,24 @@
 
     </div>
   </div>
+
+  <!--FOOTER-->
+  <footer>
+    <div class="help-links d-flex justify-content-center">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+        <i class="fa fa-light fa-hand-holding-dollar"></i>
+      </a>
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+        <i class="fa fa-thin fa-dog"></i>
+      </a>
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+        <i class="fa fa-light fa-house"></i>
+      </a>
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+        <i class="fa fa-brands fa-facebook"></i>
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
