--- a/help.html
+++ b/help.html
@@ -77,7 +77,7 @@
       </h3>
       <p class="text-center">
         <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" class="help-links">
-          Help save more precious Pit Bulls around the world.
+          Help save more precious Pit Bulls around the world with your donations.
         </a>
       </p>
       <h3 class="text-center">
@@ -93,7 +93,7 @@
       </h3>
       <p class="text-center">
         <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" class="help-links">
-          Find your forever friend today!
+          Find and Adopt your forever friend today!
         </a>
       </p>
       <h3 class="text-center">
@@ -106,6 +106,24 @@
       </p>
     </div>
   </div>
+
+  <!--FOOTER-->
+  <footer class="help-footer">
+    <div class="help-links d-flex justify-content-center">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+        <i class="fa fa-light fa-hand-holding-dollar"></i>
+      </a>
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+        <i class="fa fa-thin fa-dog"></i>
+      </a>
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+        <i class="fa fa-light fa-house"></i>
+      </a>
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+        <i class="fa fa-brands fa-facebook"></i>
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
