--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
     </h2>
 
     <div>
-      <a href="#" class="btn btn-branding">Learn More</a>
+      <a href="/about.html" class="btn btn-branding">Learn More</a>
+      <a href="/help.html" class="btn btn-branding">How can I help</a>
     </div>
     <!--End of Hero Section-->
   </div>
@@ -112,7 +113,7 @@
 
             stable and mentally mature. This is the time of maximum fun, playing, zoomies, naps and toys galore!
           </p>
-          <a href="#" class="btn btn-branding-outline">
+          <a href="/information.html#pups-and-adults" class="btn btn-branding-outline">
             Learn More
           </a>
         </div>
@@ -145,7 +146,7 @@
             behavior will begin to settle as their individual
             personality come forth. This is the time where bonding and loyalty strengthens over time.
           </p>
-          <a href="#" class="btn btn-branding-outline">
+          <a href="/information.html#senior" class="btn btn-branding-outline">
             Learn More
           </a>
         </div>
@@ -169,7 +170,7 @@
             age begin to slow down and rest more. As our pets get older this is the time they rely on us to be there for
             them all the more, as they were for us throughout the years.
           </p>
-          <a href="#" class="btn btn-branding-outline">
+          <a href="/information.html#health" class="btn btn-branding-outline">
             Learn More
           </a>
         </div>
@@ -183,7 +184,23 @@
     </div>
 
   </div>
-
+  <!--FOOTER-->
+  <footer>
+    <div class="help-links d-flex justify-content-center">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+        <i class="fa fa-light fa-hand-holding-dollar"></i>
+      </a>
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+        <i class="fa fa-thin fa-dog"></i>
+      </a>
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+        <i class="fa fa-light fa-house"></i>
+      </a>
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+        <i class="fa fa-brands fa-facebook"></i>
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
