--- a/help.html
+++ b/help.html
@@ -26,6 +26,10 @@
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/62632c0430.js" crossorigin="anonymous"></script>
 
+  <!--Meta description tag -->
+  <meta name="description"
+    content="There are many ways to help get Pit Bulls the recognition they deserve. You can help by donating, fostering, adopting, or even liking and sharing on social media.">
+
   <!--Title of About Page-->
   <title>Ways to help - Pit Bull Pitstop</title>
 </head>
@@ -42,22 +46,22 @@
       <!--Nav links-->
       <ul>
         <li>
-          <a href="/">
+          <a href="/" title="Homepage">
             Home
           </a>
         </li>
         <li>
-          <a href="/about.html">
+          <a href="/about.html" title="About Pit Bulls">
             About
           </a>
         </li>
         <li>
-          <a href="/information.html">
+          <a href="/information.html" title="More Info">
             Key Info
           </a>
         </li>
         <li class="active">
-          <a href="/help.html" class="active">
+          <a href="/help.html" class="active" title="Ways to Help">
             Ways to Help
           </a>
         </li>
@@ -76,7 +80,8 @@
         Donate
       </h3>
       <p class="text-center">
-        <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" class="help-links">
+        <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" class="help-links"
+          title="Your money keeps things going">
           Help save more precious Pit Bulls around the world with your donations.
         </a>
       </p>
@@ -84,7 +89,8 @@
         Foster
       </h3>
       <p class="text-center">
-        <a href="https://love-a-bull.org/adopt/foster/" target="_blank" class="help-links">
+        <a href="https://love-a-bull.org/adopt/foster/" target="_blank" class="help-links"
+          title="Help out even if just for a time">
           Open your home to a Pit Bull in need.
         </a>
       </p>
@@ -92,7 +98,8 @@
         Adopt
       </h3>
       <p class="text-center">
-        <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" class="help-links">
+        <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" class="help-links"
+          title="Find a loyal companion">
           Find and Adopt your forever friend today!
         </a>
       </p>
@@ -100,7 +107,8 @@
         Watch
       </h3>
       <p class="text-center">
-        <a href="https://www.thedodo.com/series/pittie-nation" target="_blank" class="help-links">
+        <a href="https://www.thedodo.com/series/pittie-nation" target="_blank" class="help-links"
+          title="Kick back, relax, laugh and cry">
           Watch videos all about Pit Bulls and fall in love.
         </a>
       </p>
@@ -110,19 +118,23 @@
   <!--FOOTER-->
   <footer class="help-footer">
     <div class="help-links d-flex justify-content-center">
-      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" title="Pit Bull rescue donations">
         <i class="fa fa-light fa-hand-holding-dollar"></i>
       </a>
-      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank" title=" Foster a Pit today">
         <i class="fa fa-thin fa-dog"></i>
       </a>
-      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" title="Adopt a Pit Bull">
         <i class="fa fa-light fa-house"></i>
       </a>
-      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank" title=" Watch Pitties and their antics">
         <i class="fa fa-brands fa-facebook"></i>
       </a>
     </div>
+    <p class="footer-git-link">
+      This project was coded by Shanique Sully, and it is
+      <a href="https://github.com/SSully284/pit-bull-pitstop-project" target="_blank">open sourced</a>.
+    </p>
   </footer>
 </body>
 
