--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/62632c0430.js" crossorigin="anonymous"></script>
 
+  <!--Meta description tag -->
+  <meta name="description"
+    content="Pit Bulls have been misinterpreted for years and it still continues tp this day. Increase your knowledge and understand more about this type of dog.">
+
   <!--Title of Website-->
   <title>Pit Bull Pitstop - Shanique Sully</title>
 </head>
@@ -36,29 +40,29 @@
     <!--NAVIGATION-->
     <nav class="d-flex justify-content-between">
       <!-- Logo pic links-->
-      <a href="/">
+      <a href="/" title="Homepage">
         <img src="/Images/pit-bul-pitstop.png" class="logo d-none d-md-block" alt="Pit Bull Pitstop Logo Paw picture">
         <img src="/Images/logo-small.jpg" class="d-block d-md-none" alt="Small logo icon">
       </a>
       <!--Nav links-->
       <ul>
         <li class="active">
-          <a href="/" class="active">
+          <a href="/" class="active" title="Homepage">
             Home
           </a>
         </li>
         <li>
-          <a href="/about.html">
+          <a href="/about.html" title="About Pit Bulls">
             About
           </a>
         </li>
         <li>
-          <a href="/information.html">
+          <a href="/information.html" title="More Info">
             Key Info
           </a>
         </li>
         <li>
-          <a href="/help.html">
+          <a href="/help.html" title="Ways to Help">
             Ways to Help
           </a>
         </li>
@@ -83,8 +87,8 @@
     </h2>
 
     <div>
-      <a href="/about.html" class="btn btn-branding">Learn More</a>
-      <a href="/help.html" class="btn btn-branding">How can I help</a>
+      <a href="/about.html" class="btn btn-branding" title="More on the Pit Bull">Learn More</a>
+      <a href="/help.html" class="btn btn-branding" title="What can I do?">How can I help</a>
     </div>
     <!--End of Hero Section-->
   </div>
@@ -113,7 +117,7 @@
 
             stable and mentally mature. This is the time of maximum fun, playing, zoomies, naps and toys galore!
           </p>
-          <a href="/information.html#pups-and-adults" class="btn btn-branding-outline">
+          <a href="/information.html#pups-and-adults" class="btn btn-branding-outline" title="What to do">
             Learn More
           </a>
         </div>
@@ -146,7 +150,7 @@
             behavior will begin to settle as their individual
             personality come forth. This is the time where bonding and loyalty strengthens over time.
           </p>
-          <a href="/information.html#senior" class="btn btn-branding-outline">
+          <a href="/information.html#senior" class="btn btn-branding-outline" title="What to do">
             Learn More
           </a>
         </div>
@@ -170,7 +174,7 @@
             age begin to slow down and rest more. As our pets get older this is the time they rely on us to be there for
             them all the more, as they were for us throughout the years.
           </p>
-          <a href="/information.html#health" class="btn btn-branding-outline">
+          <a href="/information.html#health" class="btn btn-branding-outline" title="What to know">
             Learn More
           </a>
         </div>
@@ -187,19 +191,23 @@
   <!--FOOTER-->
   <footer>
     <div class="help-links d-flex justify-content-center">
-      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" title="Pit Bull rescue donations">
         <i class="fa fa-light fa-hand-holding-dollar"></i>
       </a>
-      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank" title=" Foster a Pit today">
         <i class="fa fa-thin fa-dog"></i>
       </a>
-      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" title="Adopt a Pit Bull">
         <i class="fa fa-light fa-house"></i>
       </a>
-      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank" title=" Watch Pitties and their antics">
         <i class="fa fa-brands fa-facebook"></i>
       </a>
     </div>
+    <p class="footer-git-link">
+      This project was coded by Shanique Sully, and it is
+      <a href="https://github.com/SSully284/pit-bull-pitstop-project" target="_blank">open sourced</a>.
+    </p>
   </footer>
 </body>
 
