--- a/information.html
+++ b/information.html
@@ -27,8 +27,12 @@
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/62632c0430.js" crossorigin="anonymous"></script>
 
+  <!--Meta description tag -->
+  <meta name="description"
+    content="Pit Bulls are generally low maintenance, however, learn how to care for this type of dog.">
+
   <!--Title of About Page-->
-  <title>Ways to help - Pit Bull Pitstop</title>
+  <title>Key Pit Bull Information - Pit Bull Pitstop</title>
 </head>
 
 <body>
@@ -43,22 +47,22 @@
       <!--Nav links-->
       <ul>
         <li>
-          <a href="/">
+          <a href="/" title="Homepage">
             Home
           </a>
         </li>
         <li>
-          <a href="/about.html">
+          <a href="/about.html" title="About Pit Bulls">
             About
           </a>
         </li>
         <li class="active">
-          <a href="/information.html" class="active">
+          <a href="/information.html" class="active" title="More Info">
             Key Info
           </a>
         </li>
         <li>
-          <a href="/help.html">
+          <a href="/help.html" title="Ways to Help">
             Ways to Help
           </a>
         </li>
@@ -144,7 +148,7 @@
               preventative measure can benefit these dogs as their stocky build
               impacts their joints over time. If your dog is over age 5, some more noticeable signs of arthritis
               include: reluctance for exercise and play, stiffness in the morning after sleeping the night, visible
-              stiffness from getting up from lying down, difficulty doing routine activities.
+              stiffness from getting up to from lying down, and difficulty doing routine activities.
             </p>
           </div>
 
@@ -179,19 +183,23 @@
   <!--FOOTER-->
   <footer>
     <div class="help-links d-flex justify-content-center">
-      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" title="Pit Bull rescue donations">
         <i class="fa fa-light fa-hand-holding-dollar"></i>
       </a>
-      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank" title=" Foster a Pit today">
         <i class="fa fa-thin fa-dog"></i>
       </a>
-      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" title="Adopt a Pit Bull">
         <i class="fa fa-light fa-house"></i>
       </a>
-      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank" title=" Watch Pitties and their antics">
         <i class="fa fa-brands fa-facebook"></i>
       </a>
     </div>
+    <p class="footer-git-link">
+      This project was coded by Shanique Sully, and it is
+      <a href="https://github.com/SSully284/pit-bull-pitstop-project" target="_blank">open sourced</a>.
+    </p>
   </footer>
 </body>
 
