--- a/about.html
+++ b/about.html
@@ -27,6 +27,11 @@
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/62632c0430.js" crossorigin="anonymous"></script>
 
+  <!--Meta description tag -->
+  <meta name="description"
+    content="Learn and understand more about Pit bulls, where the name came from and what they are combined with.">
+
+
   <!--Title of About Page-->
   <title>About the Pit Bull - Pit Bull Pitstop</title>
 </head>
@@ -43,22 +48,22 @@
       <!--Nav links-->
       <ul>
         <li>
-          <a href="/">
+          <a href="/" title="Homepage">
             Home
           </a>
         </li>
         <li class="active">
-          <a href="/about.html" class="active">
+          <a href="/about.html" class="active" title="About Pit Bulls">
             About
           </a>
         </li>
         <li>
-          <a href="/information.html">
+          <a href="/information.html" title="More Info">
             Key Info
           </a>
         </li>
         <li>
-          <a href="/help.html">
+          <a href="/help.html" title="Ways to Help">
             Ways to Help
           </a>
         </li>
@@ -81,17 +86,13 @@
             Mixed breed dogs with certain physical traits
           </h2>
           <p class="mb-5">
-            According to the
-            <a href="https://animalfoundation.com/whats-going-on/blog/pitbull-breed#:~:text=%E2%80%9CPitbulls%20or%20pit%20bulls%E2%80%9D%20are,muscular%20body%20and%20broad%20head."
-              target="_blank" class="about-pit-link">
-              AnimalFoundation.com
-            </a>
+            According to the AnimalFoundation.com
             today there are at least five breeds of dogs that are commonly misidentified and lumped into the category of
             the pitbull-type dogs. The term “pit bull” is commonly used to refer to mixed breed dogs with certain
             physical traits,
             such as a muscular body and broad head.
           </p>
-          <a href="/information.html" class="btn btn-branding">Find out more</a>
+          <a href="/information.html" class="btn btn-branding" title="More to learn">Find out more</a>
         </div>
       </div>
       <div class="col-md-6">
@@ -99,24 +100,65 @@
           alt="Picture of adult brown pit bull snuggled in a blanket.">
       </div>
     </div>
+    <div class="row about-extra">
+      <h3>
+        What is a Pit Bull?
+      </h3>
+      <p>
+        Today there are at least five breeds of dogs that are commonly misidentified and lumped into the category of the
+        pitbull-type dogs: the English bull terrier, the American bulldog, the boxer, the American pit bull terrier and
+        the
+        American Staffordshire terrier.
+        <br />
+        <br />
+        Many different breeds and combinations can look like a “pit bull.” In fact many dogs that are well known and
+        loved, after being DNA tested, are lumped into the pit bull category. Some common breeds such as: cocker
+        spaniel,
+        boxer, golden
+        retriever, bulldog,
+        German shepherd, Boston terrier, and many other breeds in their heritage. For some dogs, assigning just one main
+        breed
+        is difficult.
+      </p>
+
+      <h3 class="name-origin">
+        Where did the name come from?
+      </h3>
+      <p>
+        The term “pit bull” originated in the British Isles in the early 1800s when the sport “bull baiting”
+        emerged.
+        Bull baiting involved tying a bull to an iron stake that gave him about a 30-foot radius in which to move.
+        Blowing
+        the
+        bull’s nose full of pepper to enrage the animal was also done to add to the whole affair. Then dogs were set on
+        him
+        to immobilize the bull for the public's
+        entertainment.
+      </p>
+    </div>
   </div>
+
 
   <!--FOOTER-->
   <footer>
     <div class="help-links d-flex justify-content-center">
-      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank">
+      <a href="https://vrcpitbull.com/how-you-can-help/donations/" target="_blank" title="Pit Bull rescue donations">
         <i class="fa fa-light fa-hand-holding-dollar"></i>
       </a>
-      <a href="https://love-a-bull.org/adopt/foster/" target="_blank">
+      <a href="https://love-a-bull.org/adopt/foster/" target="_blank" title=" Foster a Pit today">
         <i class="fa fa-thin fa-dog"></i>
       </a>
-      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank">
+      <a href="https://pitbullrescuecyprus.com/bullies-for-adoption" target="_blank" title="Adopt a Pit Bull">
         <i class="fa fa-light fa-house"></i>
       </a>
-      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank">
+      <a href="https://www.thedodo.com/series/pittie-nation" target="_blank" title=" Watch Pitties and their antics">
         <i class="fa fa-brands fa-facebook"></i>
       </a>
     </div>
+    <p class="footer-git-link">
+      This project was coded by Shanique Sully, and it is
+      <a href="https://github.com/SSully284/pit-bull-pitstop-project" target="_blank">open sourced</a>.
+    </p>
   </footer>
 </body>
 
