removed horizontal scroll of info page on small devices
Need to fix the spacing issue in the footer and row next.

--- a/information.html
+++ b/information.html
@@ -71,7 +71,7 @@
   </div>
 
   <!--Overall Page Content Container-->
-  <div class="content-container container">
+  <div class="content-container container info-container">
 
     <div class="row">
 
